--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port=9210
-spring.cloud.config.server.git.uri=https://git.oschina.net/zhou666/spring-cloud-7simple.git
-spring.cloud.config.server.git.searchPaths=cloud-config-repo
-eureka.client.serviceUrl.defaultZone=http\://localhost\:9200/eureka/,http\://localhost\:9201/eureka/
 spring.application.name=config-server
+
+# config repo
+spring.cloud.config.server.git.uri=https://github.com/luoguangyu/spring-cloud-simple.git
+spring.cloud.config.server.git.searchPaths=config-repo
+eureka.client.serviceUrl.defaultZone=http\://localhost\:9200/eureka/,http\://localhost\:9201/eureka/
+
+# logging config for logback
+logging.level.com.ivan.cloud = debug
+#logging.level.root= debug
