--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,13 +1,11 @@
 spring.application.name=user-service
-
 server.port=9220
 
-eureka.client.serviceUrl.defaultZone=http://localhost:9200/eureka/
-
+# eureka config
+eureka.client.serviceUrl.defaultZone=http\://localhost\:9200/eureka/,http\://localhost\:9201/eureka/
 # 客户端刷新的频率，确保服务状态实时更新到服务器端
 eureka.instance.lease-renewal-interval-in-seconds=5
 eureka.instance.lease-expiration-duration-in-seconds=5
-
 
 # logging config for logback
 logging.level.com.ivan.cloud = debug
