--- a/user-webapp/src/main/resources/application.properties
+++ b/user-webapp/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.application.name=user-webapp
 server.port=9230
 
 #config server information
-spring.cloud.config.uri=http://127.0.0.1:${config.port:9210}
-spring.cloud.config.name=config-server
+#spring.cloud.config.name=config-server
+spring.cloud.config.uri=http://127.0.0.1:${config.port:9210}/
 spring.cloud.config.profile=${config.profile:dev}
 
 #eureka server information
-eureka.client.serviceUrl.defaultZone=http\://localhost\:9200/eureka/,http\://localhost\:9201/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9200/eureka/,http://localhost:9201/eureka/
 
 #ribbon config
 user-service.ribbon.ConnectTimeout=5000
