--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9210
 spring.application.name=config-server
 
 # config repo
-spring.cloud.config.server.git.uri=https://github.com/luoguangyu/spring-cloud-simple.git
+spring.cloud.config.server.git.uri=https://github.com/luoguangyu/spring-cloud-simple
 spring.cloud.config.server.git.searchPaths=config-repo
 eureka.client.serviceUrl.defaultZone=http\://localhost\:9200/eureka/,http\://localhost\:9201/eureka/
 
