Refine config-server

--- a/user-webapp/src/main/resources/bootstrap.properties
+++ b/user-webapp/src/main/resources/bootstrap.properties
@@ -1,6 +1,5 @@
 
 #enable to get config from eureka server
-
 #eureka server information
 eureka.client.serviceUrl.defaultZone=http://localhost:9200/eureka/,http://localhost:9201/eureka/
 
@@ -9,16 +8,8 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=config-server
 spring.cloud.config.name=config-server
 spring.cloud.config.profile=dev
-spring.cloud.config.label=master
+#spring.cloud.config.label=master
 
 #service name
 spring.application.name=user-webapp
 server.port=9230
-
-#ribbon config
-user-service.ribbon.ConnectTimeout=5000
-user-service.ribbon.ReadTimeout=10000
-
-# logging config for logback
-logging.level.com.ivan.cloud = debug
-#logging.level.root= debug
