--- a/eureka-server/src/main/resources/application-peer1.properties
+++ b/eureka-server/src/main/resources/application-peer1.properties
@@ -1,9 +1,12 @@
+spring.application.name=eureka-server
 server.port=9200
 
+# peer config
+eureka.instance.hostname=localhost
 # client config
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:9201/eureka/
 
 # server config
 eureka.server.enable-self-preservation=false
